--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,13 +6,16 @@
     <title>Criando site</title>
     <style>
         body {
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
-            background-attachment: fixed;
+            background-attachment: fixed;*/
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat cover fixed;
+            background-size: cover;
         }
         main {
             background-color: white;
